--- a/silver_isp/views/isp_menus.xml
+++ b/silver_isp/views/isp_menus.xml
@@ -7,7 +7,7 @@
                 <menuitem id="menu_isp_infrastructure" name="Infrastructura"   parent="menu_silver_isp_root" sequence="10"/>
 
 
-        <menuitem id="menu_isp_routers" name="Routers" parent="menu_isp_infrastructure" sequence="110"/>
+        <!--menuitem id="menu_isp_routers" name="Routers" parent="menu_isp_infrastructure" sequence="110"/>
 
             <menuitem id="menu_isp_router_queue_wizard" name="Router Queues" parent="menu_isp_routers" action="action_isp_router_queue_wizard" sequence="60"/>
             <menuitem id="menu_isp_router_interface_wizard" name="Router Interfaces" parent="menu_isp_routers" action="action_isp_router_interface_wizard" sequence="20"/>
@@ -15,7 +15,7 @@
             <menuitem id="menu_isp_router_ppp_active_wizard" name="PPP Active Connections" parent="menu_isp_routers" action="action_isp_router_ppp_active_wizard" sequence="40"/>
             <menuitem id="menu_isp_router_firewall_wizard" name="Firewall Rules" parent="menu_isp_routers" action="action_isp_router_firewall_wizard" sequence="50"/>
             <menuitem id="menu_isp_router" name="Routers" parent="menu_isp_routers" action="action_isp_router" sequence="10"/>
-            <menuitem id="menu_isp_router_queue_wizard" name="Router Queues" parent="menu_isp_routers" action="action_isp_router_queue_wizard" sequence="60"/>
+            <menuitem id="menu_isp_router_queue_wizard" name="Router Queues" parent="menu_isp_routers" action="action_isp_router_queue_wizard" sequence="60"/-->
 
         <menuitem id="menu_isp_nodes" name="Nodos" parent="menu_isp_infrastructure" sequence="20"/>
 
@@ -42,6 +42,9 @@
 
         <menuitem id="menu_isp_radiuss" name="Radius" parent="menu_isp_infrastructure" sequence="80"/>
             <menuitem id="menu_isp_radius" name="Servidores Radius" parent="menu_isp_radiuss" action="action_isp_radius" sequence="90"/>
+
+        <menuitem id="menu_isp_network" name="Red" parent="menu_silver_isp_root" sequence="20"/>
+            <menuitem id="menu_isp_ip_ranges" name="IP Ranges" parent="menu_isp_network" action="isp_ip_address_action" sequence="10"/>
 
 
 
