--- a/silver_isp/views/isp_tr_069_views.xml
+++ b/silver_isp/views/isp_tr_069_views.xml
@@ -28,6 +28,7 @@
                         <group>
                             <field name="name"/>
                             <field name="description"/>
+                            <field name="url"/>
                         </group>
                     </sheet>
                 </form>
