--- a/silver_isp/views/isp_ip_address_views.xml
+++ b/silver_isp/views/isp_ip_address_views.xml
@@ -1,47 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <data>
-        <!-- isp.ip.address -->
-        <record id="action_isp_ip_address" model="ir.actions.act_window">
-            <field name="name">Direcciones IP ISP</field>
-            <field name="res_model">isp.ip.address</field>
-            <field name="view_mode">tree,form</field>
-        </record>
+    <!-- isp.ip.address Views -->
+    <record id="isp_ip_address_view_tree" model="ir.ui.view">
+        <field name="name">isp.ip.address.tree</field>
+        <field name="model">isp.ip.address</field>
+        <field name="arch" type="xml">
+            <tree string="IP Ranges">
+                <field name="name"/>
+                <field name="cidr"/>
+                <field name="gateway"/>
+                <field name="usage_percentage" widget="progressbar"/>
+            </tree>
+        </field>
+    </record>
 
-        <record id="view_isp_ip_address_tree" model="ir.ui.view">
-            <field name="name">isp.ip.address.tree</field>
-            <field name="model">isp.ip.address</field>
-            <field name="arch" type="xml">
-                <tree string="Direcciones IP ISP">
-                    <field name="name"/>
-                    <field name="core_id"/>
-                    <field name="olt_id"/>
-                    <field name="card_id"/>
-                    <field name="port_id"/>
-                    <field name="radius_id"/>
-                    <field name="is_tr_069"/>
-                </tree>
-            </field>
-        </record>
-
-        <record id="view_isp_ip_address_form" model="ir.ui.view">
-            <field name="name">isp.ip.address.form</field>
-            <field name="model">isp.ip.address</field>
-            <field name="arch" type="xml">
-                <form string="Dirección IP ISP">
-                    <sheet>
+    <record id="isp_ip_address_view_form" model="ir.ui.view">
+        <field name="name">isp.ip.address.form</field>
+        <field name="model">isp.ip.address</field>
+        <field name="arch" type="xml">
+            <form string="IP Range">
+                <header>
+                    <button name="action_generate_ips" type="object" string="Generate IPs" class="oe_highlight"/>
+                </header>
+                <sheet>
+                    <div class="oe_title">
+                        <h1><field name="name" placeholder="e.g. Public IPs Sector A"/></h1>
+                    </div>
+                    <group>
                         <group>
-                            <field name="name"/>
-                            <field name="core_id"/>
-                            <field name="olt_id"/>
-                            <field name="card_id"/>
-                            <field name="port_id"/>
-                            <field name="radius_id"/>
-                            <field name="is_tr_069"/>
+                            <field name="cidr"/>
+                            <field name="gateway" readonly="1"/>
                         </group>
-                    </sheet>
-                </form>
-            </field>
-        </record>
-    </data>
+                        <group>
+                            <field name="total_ips"/>
+                            <field name="used_ips"/>
+                            <field name="usage_percentage" widget="progressbar"/>
+                        </group>
+                    </group>
+                    <notebook>
+                        <page string="IP Addresses" name="ip_lines">
+                            <field name="line_ids" nolabel="1">
+                                <tree editable="bottom">
+                                    <field name="name" readonly="1"/>
+                                    <field name="status"/>
+                                    <field name="assigned_to"/>
+                                    <field name="description"/>
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <record id="isp_ip_address_action" model="ir.actions.act_window">
+        <field name="name">IP Ranges</field>
+        <field name="res_model">isp.ip.address</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
 </odoo>
