--- a/silver_isp/views/isp_core_views.xml
+++ b/silver_isp/views/isp_core_views.xml
@@ -197,24 +197,17 @@
                                     <field name="is_desactive_olt" widget="boolean_toggle"/>
                                 </group>
                             </page>
-                            <page name="ip_address"   string="Direcciones IP" invisible="type_access_net not in ['dhcp', 'dhcp_leases', 'dhcp_leases_vlan']">
-                                
-                                    <field name="ip_address_line_ids" nolabel="1">
-                                        <tree>
-                                            <field name="name"/>
-                                            <field name="gateway"/>
-                                            <field name="network_address"/>
-                                            <field name="broadcast_address"/>
-                                            <button name="action_borrar_pool" string="Borrar Pool" type="object" class="oe_highlight"/>
-                                            <button name="action_remover_gw" string="Remover GW" type="object" class="oe_highlight"/>
-                                            <button name="action_remover_ct" string="Remover CT" type="object" class="oe_highlight"/>
-                                            <button name="action_regular_pool" string="Regular Pool" type="object" class="oe_highlight"/>
-                                            <button name="unlink" string="Borrar" type="object" class="oe_highlight"/>
-                                        </tree>
-                                    </field>
-                                
-                                    <field name="ip_address_ids"   nolabel="1"/>
-                                
+                            <page name="ip_address"   string="Direcciones IP">
+                                <field name="ip_address_ids">
+                                    <tree editable="bottom">
+                                        <field name="name"/>
+                                        <field name="cidr"/>
+                                        <field name="gateway"/>
+                                        <field name="status"/>
+                                        <field name="assigned_to"/>
+                                        <field name="description"/>
+                                    </tree>
+                                </field>
                             </page>
                             
                             <page name="config_port_slot" string="Configuracion Interface GPON" invisible="brand_description != 'hua'">
