--- a/silver_isp/views/isp_ip_address_line_views.xml
+++ b/silver_isp/views/isp_ip_address_line_views.xml
@@ -14,11 +14,7 @@
             <field name="arch" type="xml">
                 <tree string="Líneas de Dirección IP ISP">
                     <field name="name"/>
-                    <field name="core_id"/>
-                    <field name="olt_id"/>
-                    <field name="card_id"/>
-                    <field name="port_id"/>
-                    <field name="radius_id"/>
+                    <field name="netdev_id"/>
                     <field name="is_tr_069"/>
                 </tree>
             </field>
@@ -32,11 +28,7 @@
                     <sheet>
                         <group>
                             <field name="name"/>
-                            <field name="core_id"/>
-                            <field name="olt_id"/>
-                            <field name="card_id"/>
-                            <field name="port_id"/>
-                            <field name="radius_id"/>
+                    <field name="netdev_id"/>
                             <field name="is_tr_069"/>
                         </group>
                     </sheet>
