--- a/silver_isp/views/isp_olt_card_port_views.xml
+++ b/silver_isp/views/isp_olt_card_port_views.xml
@@ -54,6 +54,20 @@
                                 <field name="olt_card_id"/>
                             </group>
                         </group>
+                        <notebook colspan="4">
+                            <page name="ip_addresses" string="Direcciones IP">
+                                <field name="ip_address_ids">
+                                    <tree editable="bottom">
+                                        <field name="name"/>
+                                        <field name="cidr"/>
+                                        <field name="gateway"/>
+                                        <field name="status"/>
+                                        <field name="assigned_to"/>
+                                        <field name="description"/>
+                                    </tree>
+                                </field>
+                            </page>
+                        </notebook>
                     </sheet>
                     <div class="oe_chatter">
                         <field name="message_follower_ids"/>
