--- a/silver_isp/views/isp_olt_card_views.xml
+++ b/silver_isp/views/isp_olt_card_views.xml
@@ -51,22 +51,18 @@
                                 <field name="olt_id"/>
                             </group>
                         </group>
-                        <group name="ip_address" string="Direccionamiento IP">
-                            <group>
-                                <field name="type_access_net"/>
-                            </group>
-                            <group>
-                                <field name="dhcp_custom_server" invisible="type_access_net != 'dhcp_leases'"/>
-                            </group>
-                        </group>
                         <notebook colspan="4">
-                            <page name="ip_address" string="Direcciones IP" invisible="type_access_net != 'dhcp' and type_access_net != 'dhcp_leases'">
-                                <group>
-                                    <field name="ip_address_line_ids" nolabel="1"/>
-                                </group>
-                                <group>
-                                    <field name="ip_address_ids" nolabel="1"/>
-                                </group>
+                            <page name="ip_addresses" string="Direcciones IP">
+                                <field name="ip_address_ids">
+                                    <tree editable="bottom">
+                                        <field name="name"/>
+                                        <field name="cidr"/>
+                                        <field name="gateway"/>
+                                        <field name="status"/>
+                                        <field name="assigned_to"/>
+                                        <field name="description"/>
+                                    </tree>
+                                </field>
                             </page>
                         </notebook>
                     </sheet>
